# screencap

./: .gitignore  .pre-commit-config.yaml  .tool-versions  CLAUDE.md  README.md  TODO.md  pyproject.toml  repomix.config.json5  screencap.py  server.py  taskfile.yml
.claude/: settings.json
tests/: test_integration.py  test_mcp.py  test_props.py  test_unit.py
